add customers controller

--- a/app/views/blog_pages/help.html.haml
+++ b/app/views/blog_pages/help.html.haml
@@ -1,2 +1,4 @@
-%h1 BlogPages#help
-%p Find me in app/views/blog_pages/help.html.haml
+- provide(:title, 'Help')
+This is a
+%a{:href => "https://github.com/wishka/BlackListBlog"} Help page
+of Blog with Black List
