--- a/app/views/blog_pages/home.html.haml
+++ b/app/views/blog_pages/home.html.haml
@@ -1,2 +1,11 @@
-%h1 BlogPages#home
-%p Find me in app/views/blog_pages/home.html.haml
+- provide(:title, 'Home')
+.center.jumbotron
+  %h1 Welcome to the Blog with Black List
+
+  %h2
+    This is a
+    %a{:href => "https://github.com/wishka/BlackListBlog"} Home page
+    of Blog with Black List
+
+
+  = link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary"
