--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -1,2 +1,5 @@
-%h1 Customers#new
-%p Find me in app/views/customers/new.html.haml
+- provide(:title, 'Sign up')
+%h1 Sign up
+.row
+  .col-md-6.col-md-offset-3
+    = render "form"
