--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,4 +6,18 @@
         %li= link_to "Home", root_path
         %li= link_to "Help", help_path
         %li= link_to "About", about_path
-        %li= link_to "Log in", '#'
+        - if logged_in?
+          %li= link_to "Users", '#'
+          %li.dropdown
+            %a#dropdownMenuLink.btn.btn-secondary.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", :href => "#", :role => "button"}
+              = current_user.name
+            %ul.dropdown-menu{"aria-labelledby" => "dropdownMenuLink"}
+              %li
+                = link_to "Profile", current_user, class: "dropdown-item"
+              %li
+                = link_to "Settings", '#', class: "dropdown-item"
+              %li.divider
+              %li
+                = link_to "Log out", logout_path, method: "delete"
+        - else
+          %li= link_to "Log in", login_path
