--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,15 +7,15 @@
         %li= link_to "Help", help_path
         %li= link_to "About", about_path
         - if logged_in?
-          %li= link_to "Users", '#'
+          %li= link_to "Customers", customers_path
           %li.dropdown
             %a#dropdownMenuLink.btn.btn-secondary.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", :href => "#", :role => "button"}
-              = current_user.name
+              = current_customer.name
             %ul.dropdown-menu{"aria-labelledby" => "dropdownMenuLink"}
               %li
-                = link_to "Profile", current_user, class: "dropdown-item"
+                = link_to "Profile", current_customer, class: "dropdown-item"
               %li
-                = link_to "Settings", '#', class: "dropdown-item"
+                = link_to "Settings", edit_customer_path(current_customer), class: "dropdown-item"
               %li.divider
               %li
                 = link_to "Log out", logout_path, method: "delete"
