--- a/app/views/customers/show.html.haml
+++ b/app/views/customers/show.html.haml
@@ -3,5 +3,9 @@
   %aside.col-md-4
     %section.user_info
       %h1
-        = @customer.name
-        = @customer.email
+      %p Name:
+      %b= @customer.name
+      %p Email
+      %b= @customer.email
+      %p Phone
+      %b= @customer.cell
